error.txt
make -j8      ✔  20  04:35:05 
[  0%] Built target opencv_dnn_plugins
[  0%] Built target opencv_highgui_plugins
[  0%] Built target opencv_videoio_plugins
[  0%] Built target gen-pkgconfig
[  0%] Built target ittnotify
Consolidate compiler generated dependencies of target tbb
[  1%] Built target ippiw
[  3%] Built target libopenjp2
[  3%] Built target ade
[  3%] Built target opencv.sfm.numeric
[  3%] Built target opencv_cudev
[  3%] Built target gen_opencv_python_source
[  5%] Built target libtiff
[  7%] Built target libprotobuf
[  8%] Built target opencv.sfm.multiview
[  8%] Building CXX object 3rdparty/tbb/CMakeFiles/tbb.dir/oneTBB-2021.11.0/src/tbb/arena.cpp.o
[  8%] Building CXX object 3rdparty/tbb/CMakeFiles/tbb.dir/oneTBB-2021.11.0/src/tbb/task_dispatcher.cpp.o
In file included from /usr/lib/gcc/x86_64-linux-gnu/11/include/x86gprintrin.h:89,
                 from /usr/lib/gcc/x86_64-linux-gnu/11/include/immintrin.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_machine.h:44,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_utils.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:20,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.cpp:17:
/usr/lib/gcc/x86_64-linux-gnu/11/include/waitpkgintrin.h: In function ‘void tbb::detail::r1::prolonged_pause()’:
/usr/lib/gcc/x86_64-linux-gnu/11/include/waitpkgintrin.h:53:1: error: inlining failed in call to ‘always_inline’ ‘unsigned char _tpause(unsigned int, long long unsigned int)’: target specific option mismatch
   53 | _tpause (unsigned int __A, unsigned long long __B)
      | ^~~~~~~
In file included from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:24,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.cpp:17:
/home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/scheduler_common.h:248:16: note: called from here
  248 |         _tpause(0, time_stamp + 1000);
      |         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/lib/gcc/x86_64-linux-gnu/11/include/x86gprintrin.h:89,
                 from /usr/lib/gcc/x86_64-linux-gnu/11/include/immintrin.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_machine.h:44,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_utils.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:20,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.cpp:17:
/usr/lib/gcc/x86_64-linux-gnu/11/include/waitpkgintrin.h:53:1: error: inlining failed in call to ‘always_inline’ ‘unsigned char _tpause(unsigned int, long long unsigned int)’: target specific option mismatch
   53 | _tpause (unsigned int __A, unsigned long long __B)
      | ^~~~~~~
In file included from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:24,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.cpp:17:
/home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/scheduler_common.h:248:16: note: called from here
  248 |         _tpause(0, time_stamp + 1000);
      |         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/lib/gcc/x86_64-linux-gnu/11/include/x86gprintrin.h:89,
                 from /usr/lib/gcc/x86_64-linux-gnu/11/include/immintrin.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_machine.h:44,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_utils.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:20,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.cpp:17:
/usr/lib/gcc/x86_64-linux-gnu/11/include/waitpkgintrin.h:53:1: error: inlining failed in call to ‘always_inline’ ‘unsigned char _tpause(unsigned int, long long unsigned int)’: target specific option mismatch
   53 | _tpause (unsigned int __A, unsigned long long __B)
      | ^~~~~~~
In file included from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:24,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.cpp:17:
/home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/scheduler_common.h:248:16: note: called from here
  248 |         _tpause(0, time_stamp + 1000);
      |         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/lib/gcc/x86_64-linux-gnu/11/include/x86gprintrin.h:89,
                 from /usr/lib/gcc/x86_64-linux-gnu/11/include/immintrin.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_machine.h:44,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_utils.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:20,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/arena.cpp:17:
/usr/lib/gcc/x86_64-linux-gnu/11/include/waitpkgintrin.h: In function ‘void tbb::detail::r1::prolonged_pause()’:
/usr/lib/gcc/x86_64-linux-gnu/11/include/waitpkgintrin.h:53:1: error: inlining failed in call to ‘always_inline’ ‘unsigned char _tpause(unsigned int, long long unsigned int)’: target specific option mismatch
   53 | _tpause (unsigned int __A, unsigned long long __B)
      | ^~~~~~~
In file included from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:24,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/arena.cpp:17:
/home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/scheduler_common.h:248:16: note: called from here
  248 |         _tpause(0, time_stamp + 1000);
      |         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/lib/gcc/x86_64-linux-gnu/11/include/x86gprintrin.h:89,
                 from /usr/lib/gcc/x86_64-linux-gnu/11/include/immintrin.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_machine.h:44,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_utils.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:20,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/arena.cpp:17:
/usr/lib/gcc/x86_64-linux-gnu/11/include/waitpkgintrin.h:53:1: error: inlining failed in call to ‘always_inline’ ‘unsigned char _tpause(unsigned int, long long unsigned int)’: target specific option mismatch
   53 | _tpause (unsigned int __A, unsigned long long __B)
      | ^~~~~~~
In file included from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:24,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/arena.cpp:17:
/home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/scheduler_common.h:248:16: note: called from here
  248 |         _tpause(0, time_stamp + 1000);
      |         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/lib/gcc/x86_64-linux-gnu/11/include/x86gprintrin.h:89,
                 from /usr/lib/gcc/x86_64-linux-gnu/11/include/immintrin.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_machine.h:44,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/include/oneapi/tbb/detail/_utils.h:27,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:20,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/arena.cpp:17:
/usr/lib/gcc/x86_64-linux-gnu/11/include/waitpkgintrin.h:53:1: error: inlining failed in call to ‘always_inline’ ‘unsigned char _tpause(unsigned int, long long unsigned int)’: target specific option mismatch
   53 | _tpause (unsigned int __A, unsigned long long __B)
      | ^~~~~~~
In file included from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/task_dispatcher.h:24,
                 from /home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/arena.cpp:17:
/home/user/opencv/build/3rdparty/tbb/oneTBB-2021.11.0/src/tbb/scheduler_common.h:248:16: note: called from here
  248 |         _tpause(0, time_stamp + 1000);
      |         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [3rdparty/tbb/CMakeFiles/tbb.dir/build.make:426: 3rdparty/tbb/CMakeFiles/tbb.dir/oneTBB-2021.11.0/src/tbb/task_dispatcher.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [3rdparty/tbb/CMakeFiles/tbb.dir/build.make:104: 3rdparty/tbb/CMakeFiles/tbb.dir/oneTBB-2021.11.0/src/tbb/arena.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:3882: 3rdparty/tbb/CMakeFiles/tbb.dir/all] Error 2
make: *** [Makefile:166: all] Error 2
